# Terra

./: .gitignore  README.md  WORKSPACE.bazel  build.gradle
app/: build.gradle  (+1 more)
app/src/main/: AndroidManifest.xml  BUILD.bazel
app/src/main/java/com/blueridgebinary/terra/: AboutActivity.java  AddEditLocalityActivity.java  CompassActivity.java  CompassView.java  CreateNewProjectActivity.java  CreateProjectActivity.java  DataScreenActvity.java  ExportActivity.java  GpsHelper.java  MainActivity.java  MainActivityFragmentsTesting.java  MainActivityGpsTesting.java  OpenDataset.java  OpenProjectActivity.java  PreferencesActivity.java  TestDB.java  WelcomeActivity.java
app/src/main/java/com/blueridgebinary/terra/adapters/: CompassDataCursorAdapter.java  EmptyCardViewHolder.java  EmptyViewHolder.java  HomeLocalityListCursorAdapter.java  HomeScreenPagerAdapter.java  SessionCursorAdapter.java  TerraCompassModeArrayAdapter.java  TerraLocalitySpinnerArrayAdapter.java  TerraMeasurementCategoryCursorResourceAdapter.java
app/src/main/java/com/blueridgebinary/terra/data/: CurrentDataset.java  CurrentLocality.java  CurrentSession.java  TerraDbContentProvider.java  TerraDbContract.java  TerraDbHelper.java  TerraDbOperationsHelper.java
app/src/main/java/com/blueridgebinary/terra/fragments/: HomeScreenDataOverviewFragment.java  HomeScreenFragment.java  HomeScreenMapFragment.java  HomeScreenOverviewFragment.java  LocalityUi.java  MeasurementCategoryUi.java  OnLocalitySelectedListener.java  OnTerraFragmentInteractionListener.java  RefreshableFragment.java  SessionUi.java  TerraPreferenceFragment.java
app/src/main/java/com/blueridgebinary/terra/loaders/: LoaderIds.java  LocalityLoaderListener.java  MeasurementCategoryLoaderListener.java  SessionLoaderListener.java
app/src/main/java/com/blueridgebinary/terra/utils/: AdapterViewTypes.java  ListenableBoolean.java  ListenableInteger.java  PermissionIds.java  ProjectCsvExporter.java  util.java
app/src/main/res/drawable/: bottom_nav_home_selector.xml  ic_launcher_foreground_terra.xml  selector_card_color.xml  selector_delete_icon.xml  selector_session_view_row.xml  selector_spinner_item_color.xml
app/src/main/res/drawable-xxhdpi/: selector_locality_list_view_row.xml  spinner_background.xml
app/src/main/res/layout/: activity_about.xml  activity_add_edit_locality.xml  activity_compass.xml  activity_create_new_project.xml  activity_create_project.xml  activity_data_screen_actvity.xml  activity_export.xml  activity_main.xml  activity_main_2.xml  activity_open_project.xml  activity_preferences.xml  activity_welcome.xml  add_compass_data.xml  add_data_activity.xml  alert_need_data.xml  compass_data_layout.xml  dialog_add_measurement_category.xml  empty_recyclerview.xml  empty_recyclerview_card.xml  fragment_home_screen_data_overview.xml  fragment_home_screen_map.xml  fragment_home_screen_overview.xml  fragment_open_dataset.xml  fragment_terra_preference.xml  locality_layout.xml  session_layout.xml  terra_compass_mode_spinner_item.xml  terra_main_spinner.xml  terra_measurement_category_spinner_item.xml  terra_station_spinner_item.xml  toolbar_main.xml
app/src/main/res/menu/: bottom_nav_data_screen_items.xml  bottom_nav_home_items.xml  menu_main.xml  options_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_terra_round.xml
app/src/main/res/values/: array.xml  attrs_compass_view.xml  colors.xml  ic_launcher_background_terra.xml  keys.xml  strings.xml  styles.xml
(+5 files in other folders)
