android_sdk_repository(
    name = "androidsdk",
    path = "/home/dorran/Android/Sdk",
    api_level = 27
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "3.3"
RULES_JVM_EXTERNAL_SHA = "d85951a92c0908c80bd8551002d66cb23c3434409c814179c0ff026b53544dab"

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    name="maven",
    repositories = [
        "https://jcenter.bintray.com/",
        "https://maven.google.com"
    ],
    artifacts = [
        "com.android.support.test.espresso:espresso-core:2.2.2",
        "com.android.support:appcompat-v7:25.3.1",
        "com.android.support.constraint:constraint-layout:1.0.2",
        "com.android.support:support-v4:25.3.1",
        "com.android.support:recyclerview-v7:25.3.1",
        "com.android.support:cardview-v7:28.0.0",
        "com.android.support:design:25.3.1",
        "com.google.android.gms:play-services-maps:16.0.0",
        "net.cachapa.expandablelayout:expandablelayout:2.9.2",
        "com.android.support:preference-v7:25.0.1",
        "com.android.support:preference-v14:25.0.1",
        "com.takisoft.fix:preference-v7:25.0.1.0",
        "androidx.test.espresso:espresso-core:3.1.1",
        "org.hamcrest:hamcrest-library:1.3",
        "com.github.florent37:shapeofview:1.3.2",
        "com.android.support:support-compat:27.0.0",
        "com.android.support:support-fragment:27.0.0",
        "com.android.support:support-core-ui:27.0.0",
        "com.android.support:support-annotations:27.0.0",
        "com.android.support:support-core-utils:27.0.0"
    ],
)
