package(
    default_visibility = ["//src:__subpackages__"],
)

android_binary(
    name = "terra",
    custom_package = "com.blueridgebinary.terra",
    deps = [
        "@maven//:com_android_support_test_espresso_espresso_core",
        "@maven//:com_android_support_appcompat_v7",
        "@maven//:com_android_support_constraint_constraint_layout",
        "@maven//:com_android_support_support_v4",
        "@maven//:com_android_support_recyclerview_v7",
        "@maven//:com_android_support_cardview_v7",
        "@maven//:com_android_support_design",
        "@maven//:com_google_android_gms_play_services_maps",
        "@maven//:net_cachapa_expandablelayout_expandablelayout",
        "@maven//:com_android_support_preference_v7",
        "@maven//:com_android_support_preference_v14",
        "@maven//:com_takisoft_fix_preference_v7",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:org_hamcrest_hamcrest_library",
        "@maven//:com_github_florent37_shapeofview",
        "@maven//:com_android_support_support_compat",
        "@maven//:com_android_support_support_fragment",
        "@maven//:com_android_support_support_core_ui",
        "@maven//:com_android_support_support_annotations",
        "@maven//:com_android_support_support_core_utils"
    ],
    srcs = glob(["java/**/*.java"]),
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"])
    # enable_data_binding = True
)
